[gd_scene load_steps=4 format=3 uid="uid://ba08ugo2g3ww3"]

[ext_resource type="Script" path="res://Scripts/mutation_stat_container.gd" id="1_scscj"]
[ext_resource type="Texture2D" uid="uid://c7i2vstthocql" path="res://Assets/plus_icon.png" id="2_qaanu"]
[ext_resource type="Texture2D" uid="uid://cxejjrndubskb" path="res://Assets/minus_icon.png" id="3_muvnr"]

[node name="MutationStatContainer" type="HBoxContainer"]
custom_minimum_size = Vector2(140, 30)
theme_override_constants/separation = 5
script = ExtResource("1_scscj")

[node name="MutationStatLabel" type="Label" parent="."]
layout_mode = 2
text = "Evasion (+1)"

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2

[node name="MutationMinusButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_muvnr")
ignore_texture_size = true
stretch_mode = 5

[node name="MutationCountLabel" type="Label" parent="."]
layout_mode = 2
text = "0"

[node name="MutationPlusButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("2_qaanu")
ignore_texture_size = true
stretch_mode = 0

[connection signal="button_down" from="MutationMinusButton" to="." method="_on_mutation_minus_button_button_down"]
[connection signal="button_down" from="MutationPlusButton" to="." method="_on_mutation_plus_button_button_down"]
